src/objects/Assignment_Rule_Entry__c.object
<CustomObject>
    <description>Add rule entries that specify the criteria used to route records. Rules can be reorder.</description>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignment_Rule__c</fullName>
        <label>Assignment Rule</label>
        <referenceTo>Assignment_Rule__c</referenceTo>
        <relationshipLabel>Assignment Rule Entries</relationshipLabel>
        <relationshipName>Assignment_Rule_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Filter_Logic__c</fullName>
        <label>Filter Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <label>Assignment Rule Entry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Assignment_Rule__c</columns>
        <columns>Filter_Logic__c</columns>
        <columns>Order__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ARE-{0000}</displayFormat>
        <label>Assignment Rule Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignment Rule Entries</pluralLabel>
    <recordTypes>
        <fullName>Criteria_Based_Rule</fullName>
        <active>true</active>
        <description>Record type for criteria based assignment rules</description>
        <label>Criteria Based Rule</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>